--- a/ApiRepaso/index.html
+++ b/ApiRepaso/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campus API</title>
+    <title> PokeAPI </title>
 </head>
 <body>
     
 </body>
-<script src="./script.js" type="module"></script>
+<script src="./script/script.js" ></script>
 </html>
