--- a/ApiRepaso/index.html
+++ b/ApiRepaso/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> PokeAPI </title>
+    <link rel="stylesheet" href="./style.css"/>
 </head>
+
 <body>
-    
+
+   <div class="fondo">
+
+        <div class="fondo__img">
+            <img class="fondo__img--1"src="./img/pokedex (1).png"/>
+        </div>
+
+        <div class="fondo__poquemonInfo">
+            <div id="fondo__poquemonInfo--name&image"></div>
+            <div id="fondo__poquemonInfo--image"></div>
+        </div>
+        <div class="fondo__formBusqueda">
+            <form name="form" method="post" action="">
+                <input type="email" name="pokemones" placeholder="Name or Number"/>
+
+
+            </form>
+
+        </div>
+   </div> 
+
 </body>
-<script src="./script/script.js" ></script>
+
+<script src="./script.js" ></script>
+
 </html>
