feat :sparkles: interactive details

--- a/ApiRepaso/index.html
+++ b/ApiRepaso/index.html
@@ -17,13 +17,12 @@
 
         <div class="fondo__poquemonInfo">
             <div id="fondo__poquemonInfo--name&image"></div>
-            <div id="fondo__poquemonInfo--image"></div>
         </div>
+
         <div class="fondo__formBusqueda">
-            <form name="form" method="post" action="">
-                <input type="email" name="pokemones" placeholder="Name or Number"/>
-
-
+            <div class="fondo__formBusqueda--borde"></div>
+            <form class="fondo__formBusqueda--form" name="form" method="post" action="">
+                <input class="fondo__formBusqueda--formtext" type="email" name="pokemones" placeholder="Name or Number"/>
             </form>
 
         </div>
