Docs :memo: README'S Update

--- a/ApiRepaso/index.html
+++ b/ApiRepaso/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> PokeAPI </title>
-    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="./style/style.css"/>
 </head>
 
 <body>
@@ -21,15 +21,13 @@
 
         <div class="fondo__formBusqueda">
             <div class="fondo__formBusqueda--borde"></div>
-            <form class="fondo__formBusqueda--form" name="form" method="post" action="">
-                <input class="fondo__formBusqueda--formtext" type="email" name="pokemones" placeholder="Name or Number"/>
-            </form>
-
+            <input id="fondo__formBusqueda--formtext" type="search" name="pokemones" placeholder="Name or Number"/>
+            <
         </div>
    </div> 
 
 </body>
 
-<script src="./script.js" ></script>
+<script src="./script/script.js" ></script>
 
 </html>
