feat :sparkles: update pokemons

--- a/ApiRepaso/index.html
+++ b/ApiRepaso/index.html
@@ -22,7 +22,9 @@
         <div class="fondo__formBusqueda">
             <div class="fondo__formBusqueda--borde"></div>
             <input id="fondo__formBusqueda--formtext" type="search" name="pokemones" placeholder="Name or Number"/>
-            <
+            
+            <button onclick="MenosId"id="fondo__formBusqueda--prev"> Prev < </button>
+            <button onclick="MasId"id="fondo__formBusqueda--next"> Next > </button>
         </div>
    </div> 
 
