feat :sparkles: final result

--- a/ApiRepaso/index.html
+++ b/ApiRepaso/index.html
@@ -22,9 +22,10 @@
         <div class="fondo__formBusqueda">
             <div class="fondo__formBusqueda--borde"></div>
             <input id="fondo__formBusqueda--formtext" type="search" name="pokemones" placeholder="Name or Number"/>
-            
-            <button onclick="MenosId"id="fondo__formBusqueda--prev"> Prev < </button>
-            <button onclick="MasId"id="fondo__formBusqueda--next"> Next > </button>
+            <div class="fondo__formBusqueda--borde2"></div>
+            <div class="fondo__formBusqueda--borde3"></div>
+            <button onclick="MenosId" id="fondo__formBusqueda--prev"> Prev < </button>
+            <button onclick="MasId" id="fondo__formBusqueda--next"> Next > </button>
         </div>
    </div> 
 
