feat :sparkles: Stetic changes

--- a/ApiBaraja/index.html
+++ b/ApiBaraja/index.html
@@ -3,13 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="https://png.pngtree.com/png-vector/20250101/ourmid/pngtree-four-aces-playing-cards-poker-winner-clipart-illustration-png-image_15007520.png">
-    <title>Casino</title>
+    <link rel="icon" type="image/x-icon" href="./img/poker.png">
+    <title>Poker</title>
     <link rel="stylesheet" href="./style/style.css"/>
 </head>
 
 <body>
-    
+
+    <div class="JuegoPoker">
+
+        <div class="JuegoPoker__ParteEstetica">
+            <a href="./html/ayuda.html">
+                <div class="JuegoPoker__ParteEstetica--ayuda">
+                <img class="ayuda" src="./img/signoayuda.png"/>
+                <p class="JuegoPoker__ParteEstetica--text">Ayuda</p>
+            </div>
+            </a>
+            
+            <div class="JuegoPoker__ParteEstetica--poker">
+                <img class="logo" src="./img/logo.png"/>
+            </div>
+        </div>
+
+        <div class="JuegoPoker__boton">
+            <a href="./html/hi-lo.html">
+                <button class="JuegoPoker__boton--comezar">Comenzar</button>
+              </a> 
+        </div>
+
+    </div>
+
 </body>
+
 
 </html>
