feat :sparkles: help section and login

--- a/ApiBaraja/html/hi-lo.html
+++ b/ApiBaraja/html/hi-lo.html
@@ -13,13 +13,14 @@
     <div class="JuegoPoker">
 
         <div class="JuegoPoker__ParteEstetica">
-            <div class="JuegoPoker__ParteEstetica--ayuda">
+            <a href="./ayuda.html">
+                <div class="JuegoPoker__ParteEstetica--ayuda">
                 <img class="ayuda" src="../img/signoayuda.png"/>
+                <p class="JuegoPoker__ParteEstetica--text">Ayuda</p>
             </div>
-            <div class="JuegoPoker__ParteEstetica--poker">
-                <img class="logo" src="../img/logo.png"/>
-            </div>
+            <img class="logo" src="../img/logo.png"/>
         </div>
+
 
         <div class="JuegoPoker__CasillaPuntos">
             <div class="JuegoPoker__CasillaPuntos--titulo">Puntos</div>
