feat :sparkles: advance in hi-lo

--- a/ApiBaraja/html/hi-lo.html
+++ b/ApiBaraja/html/hi-lo.html
@@ -15,19 +15,39 @@
         <div class="JuegoPoker__ParteEstetica">
             <a href="./ayuda.html">
                 <div class="JuegoPoker__ParteEstetica--ayuda">
-                <img class="ayuda" src="../img/signoayuda.png"/>
-                <p class="JuegoPoker__ParteEstetica--text">Ayuda</p>
-            </div>
+                    <img class="ayuda" src="../img/signoayuda.png"/>
+                    <p class="JuegoPoker__ParteEstetica--text">Ayuda</p>
+                </div>
+            </a>
             <img class="logo" src="../img/logo.png"/>
+            <div class="JuegoPoker__ParteEstetica--cartas">Cartas</div>
+            <div class="JuegoPoker__ParteEstetica--p1">Cartas Jugador1</div>
+            <div class="JuegoPoker__ParteEstetica--p2">Cartas Jugador2</div>
         </div>
+        <a href="../index.html">
+            <div class="JuegoPoker__ParteEstetica--volver">
+                <img class="volver" src="../img/flecha.png" />
+                <p class="JuegoPoker__ParteEstetica--text2">Volver al inicio</p>
+            </div>
+        </a>
 
 
         <div class="JuegoPoker__CasillaPuntos">
             <div class="JuegoPoker__CasillaPuntos--titulo">Puntos</div>
             <div class="JuegoPoker__CasillaPuntos--j1">Jugador1</div>
-            <div class="JuegoPoker__CasillaPuntos--puntos1"></div>
+            <div id="JuegoPoker__CasillaPuntos--puntos1"></div>
             <div class="JuegoPoker__CasillaPuntos--j2">Jugador2</div>
-            <div class="JuegoPoker__CasillaPuntos--puntos1"></div>
+            <div id="JuegoPoker__CasillaPuntos--puntos2"></div>
+        </div>
+
+        <div class="JuegoPoker__botones">
+            <button class="JuegoPoker__botones--mas">Mayor</button>
+            <button class="JuegoPoker__botones--menos">Menor</button>
+        </div>
+
+        <div class="JuegoPoker__api">
+            <div id="JuegoPoker__api.img"></div>
+            <div id="JuegoPoker__api.textos"></div>
         </div>
 
     </div>
