feat :sparkles: javascrip update

--- a/ApiBaraja/html/ayuda.html
+++ b/ApiBaraja/html/ayuda.html
@@ -34,7 +34,9 @@
         <div class="JuegoPoker__texto--text1">
             <p class="text1">El juego Hi-Lo es un juego de azar y estrategia donde
                 el objetivo es adivinar si el siguiente número en una secuencia de números es mayor, menor o igual al
-                anterior.
+                anterior, al igual ganado a la computadora en puntos.
+                <br/>
+                <br/>
                 En la versión más simple, el jugador simplemente apuesta a "HI" (alto) o "LO" (bajo) antes de que se
                 revele el siguiente número.
             </p>
@@ -49,7 +51,7 @@
             <p class="puntos">
 
                 1. El juego:
-                Se basa en una secuencia de números aleatorios, a menudo enteros positivos. 
+                Se basa en una secuencia de números aleatorios, enteros positivos. 
                 <br/>
                 <br/>
                 2. Apuesta:
@@ -57,7 +59,7 @@
                 <br/>
                 <br/>
                 3. Gana o pierde:
-                Si el jugador apuesta correctamente, gana una cantidad predeterminada, y si no, pierde su apuesta. 
+                Si el jugador apuesta correctamente, gana un punto, y si no, la copmputadora gana. 
                 
             </p>
         </div>
