--- a/ApiBaraja/html/hi-lo.html
+++ b/ApiBaraja/html/hi-lo.html
@@ -20,9 +20,9 @@
                 </div>
             </a>
             <img class="logo" src="../img/logo.png"/>
+            <div id="JuegoPoker__ParteEstetica--cartas_Player1"><img src=""/></div>
             <div class="JuegoPoker__ParteEstetica--cartas">Cartas</div>
-            <div class="JuegoPoker__ParteEstetica--p1">Cartas Jugador1</div>
-            <div class="JuegoPoker__ParteEstetica--p2">Cartas Jugador2</div>
+            <div class="JuegoPoker__ParteEstetica--p1">Cartas Jugador</div>
         </div>
         <a href="../index.html">
             <div class="JuegoPoker__ParteEstetica--volver">
@@ -34,9 +34,9 @@
 
         <div class="JuegoPoker__CasillaPuntos">
             <div class="JuegoPoker__CasillaPuntos--titulo">Puntos</div>
-            <div class="JuegoPoker__CasillaPuntos--j1">Jugador1</div>
+            <div class="JuegoPoker__CasillaPuntos--j1">Jugador</div>
             <div id="JuegoPoker__CasillaPuntos--puntos1"></div>
-            <div class="JuegoPoker__CasillaPuntos--j2">Jugador2</div>
+            <div class="JuegoPoker__CasillaPuntos--j2">Computadora</div>
             <div id="JuegoPoker__CasillaPuntos--puntos2"></div>
         </div>
 
@@ -45,7 +45,7 @@
             <button class="JuegoPoker__botones--menos">Menor</button>
         </div>
 
-        <div class="JuegoPoker__api">
+        <div id="JuegoPoker__api">
             <div id="JuegoPoker__api.img"></div>
             <div id="JuegoPoker__api.textos"></div>
         </div>
@@ -53,6 +53,5 @@
     </div>
 
 </body>
-
-
+<script src="../script/script.js" ></script>
 </html>
