feat :sparkles: javascrip update

--- a/ApiBaraja/html/hi-lo.html
+++ b/ApiBaraja/html/hi-lo.html
@@ -41,8 +41,8 @@
         </div>
 
         <div class="JuegoPoker__botones">
-            <button class="JuegoPoker__botones--mas">Mayor</button>
-            <button class="JuegoPoker__botones--menos">Menor</button>
+            <button id="JuegoPoker__botones--mas">Mayor</button>
+            <button id="JuegoPoker__botones--menos">Menor</button>
         </div>
 
         <div id="JuegoPoker__api">
