feat :sparkles: advance in hi-lo

--- a/ApiBaraja/html/hi-lo.html
+++ b/ApiBaraja/html/hi-lo.html
@@ -23,6 +23,7 @@
             <div id="JuegoPoker__ParteEstetica--cartas_Player1"><img src=""/></div>
             <div class="JuegoPoker__ParteEstetica--cartas">Cartas</div>
             <div class="JuegoPoker__ParteEstetica--p1">Cartas Jugador</div>
+            <div class="JuegoPoker__ParteEstetica--puntos">Valor Carta</div>
         </div>
         <a href="../index.html">
             <div class="JuegoPoker__ParteEstetica--volver">
