feat: :sparkles: functionality update

--- a/ApiBaraja/html/hi-lo.html
+++ b/ApiBaraja/html/hi-lo.html
@@ -22,7 +22,6 @@
             <img class="logo" src="../img/logo.png"/>
             <div id="JuegoPoker__ParteEstetica--cartas_Player1"><img src=""/></div>
             <div class="JuegoPoker__ParteEstetica--cartas">Cartas</div>
-            <div class="JuegoPoker__ParteEstetica--p1">Cartas Jugador</div>
             <div class="JuegoPoker__ParteEstetica--puntos">Valor Carta</div>
         </div>
         <a href="../index.html">
@@ -48,6 +47,8 @@
 
         <div id="JuegoPoker__api">
             <div id="JuegoPoker__api.img"></div>
+            <div id="JuegoPoker__api.img2"></div>
+            <div id="JuegoPoker__api.imgBack"></div>
             <div id="JuegoPoker__api.textos"></div>
         </div>
 
