feat :sparkles: delete section update

--- a/ApiTrabajoNuevo/html/eliminar.html
+++ b/ApiTrabajoNuevo/html/eliminar.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eliminar</title>
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/2921/2921205.png">
-    <link rel="stylesheet" href="./style/style.css"/>
+    <link rel="stylesheet" href="../style/eliminar.css"/>
 </head>
 <body>
+    <br/>
+    <br/>
     <a href="../index.html"><button id="botonVolver">Volver</button></a>
+    <br/>
+    <br/>
+    <h1>Seccion de Eliminar Animal</h1>
+    <h3>Digite el Id del animal que quiere eliminar</h3>
+    <input id="busqueda" type="search">
+    <button id="enviar">Eliminar</button>
+    <br/>
+    <br/>
+    <div id="infoApi"></div>
 </body>
+<script src="../script/eliminar.js"></script>
 </html>
