--- a/ApiTrabajoNuevo/html/mostar.html
+++ b/ApiTrabajoNuevo/html/mostar.html
@@ -9,10 +9,12 @@
 </head>
 
 <body>
+    <br/>
+    <br/>
     <a href="../index.html"><button id="botonVolver">Volver</button></a>
     <br/>
     <br/>
-    <h1>Seccion de Busqueda de elementos</h1>
+    <h1>Seccion de Busqueda de Animales</h1>
     <h3>Digite el Id del animal que quiere buscar</h3>
     <input id="busqueda" type="search">
     <button id="enviar">Buscar</button>
