feat :sparkles: add information update

--- a/ApiTrabajoNuevo/html/agregar.html
+++ b/ApiTrabajoNuevo/html/agregar.html
@@ -5,10 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agregar</title>
     <link rel="icon" type="image/x-icon" href="https://us.123rf.com/450wm/get4net/get4net2201/get4net220124286/180593007-cambiar-el-tama%C3%B1o-de-la-pesta%C3%B1a-del-navegador-web-aislado-sobre-fondo-blanco.jpg?ver=6">
-    <link rel="stylesheet" href="./style/style.css"/>
+    <link rel="stylesheet" href="../style/agregr.css"/>
 </head>
 
 <body>
+    <br/>
+    <br/>
     <a href="../index.html"><button id="botonVolver">Volver</button></a>
+    <br/>
+    <br/>
+    <h1>Seccion de Agregar Animal</h1>
+    <h3>Digite los datos que son pedidos</h3>
+    <br/>
+    <br/>
+    <div>
+        <h3>Name:</h3>
+        <input id="name" type="text" maxlength="20">
+    </div>
+    <br/>
+    <br/>
+    <div>
+        <h3>Link Image:</h3>
+        <input id="image" type="text" maxlength="200">
+    </div>
+    <br/>
+    <br/>
+    <div>
+        <h3>Scientific Name</h3>
+        <input id="scientific-name" type="text" maxlength="20">
+    </div>
+    <br/>
+    <br/>
+    <div>
+        <h3>Description:</h3>
+        <input id="Description" type="text" maxlength="300">
+    </div>
+    <br/>
+    <br/>
+    <button id="ENVIAR">Enviar Información</button>
+
 </body>
+<script src="../script/agregar.js"></script>
 </html>
