--- a/ApiTrabajoNuevo/html/agregar.html
+++ b/ApiTrabajoNuevo/html/agregar.html
@@ -43,6 +43,7 @@
     <br/>
     <br/>
     <button id="ENVIAR">Enviar Información</button>
+    <div id="infoApi"></div>
 
 </body>
 <script src="../script/agregar.js"></script>
