feat :sparkles: edit information final update

--- a/ApiTrabajoNuevo/html/editar.html
+++ b/ApiTrabajoNuevo/html/editar.html
@@ -5,9 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar</title>
     <link rel="icon" type="image/x-icon" href="https://thumbs.dreamstime.com/b/caricatura-al-estilo-de-un-libro-historietas-creativo-escribir-documento-original-c%C3%B3mic-para-151148960.jpg">
-    <link rel="stylesheet" href="./style/style.css"/>
+    <link rel="stylesheet" href="../style/editar.css"/>
 </head>
 <body>
+    <br/>
+    <br/>
     <a href="../index.html"><button id="botonVolver">Volver</button></a>
+    <br/>
+    <br/>
+    <h1>Seccion de Editar</h1>
+    <h3>Digite el Id del animal que quiere Editar</h3>
+    <input id="busqueda" type="search">
+    <button id="enviar">Buscar</button>
+    <br/>
+    <br/>
+    <div id="infoApi"></div>
+    <br/>
+    <br/>
+    <h3>Informacion a Editar</h3>
+    <br/>
+    <br/>
+    <h3>Name:</h3>
+    <input id="name" type="text" maxlength="20">
+</div>
+<br/>
+<br/>
+<div>
+    <h3>Link Image:</h3>
+    <input id="image" type="text" maxlength="200">
+</div>
+<br/>
+<br/>
+<div>
+    <h3>Scientific Name</h3>
+    <input id="scientific-name" type="text" maxlength="20">
+</div>
+<br/>
+<br/>
+<div>
+    <h3>Description:</h3>
+    <input id="Description" type="text" maxlength="300">
+</div>
+<br/>
+<br/>
+    <button id="ENVIAR">Enviar Informacion</button>
+    <div id="infoApi2"></div>
+
 </body>
+<script src="../script/editar.js"></script>
 </html>
