feat :sparkles: stetic part update

--- a/ApiSuperHeroes/index.html
+++ b/ApiSuperHeroes/index.html
@@ -8,8 +8,33 @@
     <link rel="stylesheet" href="./style/style.css"/>
 </head>
 <body>
-    <div class="borde">
-
+    <div class="caja">
+        <p class="titulo">Mis Heroes</p>
+    </div>
+    <div class="formulario">
+        <h1 class="gestion">Gestion de Heroes</h1>
+        <h3 class="nombre">Nombre Personaje</h3>
+        <input type="text" disabled class="nombrei">
+        <h3 class="nombreActor">Nombre Actor</h3>
+        <input type="text" class="nombreActori" disabled>
+        <h3 class="edadActor">Edad Actor</h3>
+        <input class="edadActori"type="text" disabled>
+        <h3 class="ubicacion">Ubicación</h3>
+        <input type="text" disabled class="ubicacioni">
+        <h3 class="poster">Poster</h3>
+        <input type="text" disabled class="posteri">
+        <h3 class="fecha">Fecha</h3>
+        <input class="fechai"type="date" disabled>
+        <h3 class="productora">Productora</h3>
+        <select  id="drawfs" disabled class="productorai">
+            <option>Marvel</option>
+            <option>DComics</option>
+        </select>
+        <div class="Botones">
+            <button class="nuevo">Nuevo Heroe</button>
+            <button class="Guardar">Guardar Heroe</button>
+            <button class="cancelar"> Cancelar</button>
+        </div>
     </div>
 
 </body>
