feat :sparkles: different updates

--- a/ApiSuperHeroes/index.html
+++ b/ApiSuperHeroes/index.html
@@ -11,10 +11,10 @@
     <h1>Bienvenido a la Pagina de los SuperHeroes</h1>
     <img class="fondo" src="https://wallpapercat.com/w/full/2/7/5/6848-3000x1688-desktop-hd-dc-vs-marvel-wallpaper-image.jpg">
     <div class="botones">
-        <a ><button class="ver">Visualizar Heroes</button></a>
-        <a><button class="editar">Editar Heroes</button></a>
+        <a href="./html/ver.html"><button class="ver">Visualizar Heroes</button></a>
+        <a href="./html/editar.html"><button class="editar">Editar Heroes</button></a>
         <a href="./html/nuevo.html" ><button class="agregar">Agregar Heroes</button></a>
-        <a><button class="eliminar">Eliminar Heroes</button></a>
+        <a href="./html/eliminar.html"><button class="eliminar">Eliminar Heroes</button></a>
     </div>
     
 </body>
