--- a/ApiSuperHeroes/html/nuevo.html
+++ b/ApiSuperHeroes/html/nuevo.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../style/style2.css"/>
 </head>
 <body>
+    <div class="seccion">
     <div class="caja">
         <p class="titulo">Mis Heroes</p>
     </div>
@@ -33,10 +34,10 @@
         <div class="Botones">
             <button id="nuevo">Nuevo Heroe</button>
             <button id="guardar">Guardar Heroe</button>
-            <button id="cancelar"> Cancelar</button>
+            <a href="../index.html"><button id="cancelar"> Cancelar</button></a>
         </div>
     </div>
-
+</div>
 </body>
 <script src="../script/script.js"></script>
 </html>
