feat :sparkles: images

--- a/ApiRefugio/index.html
+++ b/ApiRefugio/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PacoPets</title>
-    
+    <link rel="icon" type="image/x-icon" href="./img/logo.svg">
+    <link rel="stylesheet" href="./style/style.css"/>
 </head>
 <body>
-    
+    <header class="BarraSuperior">
+        <img class="logo" src="./img/logo.svg"/>
+        <div>
+            <img class="Huella" src="./img/huella.svg"/>
+            <p>Sobre Nosotros</p>
+        </div>
+        <div>
+            <img class="Estrella" src="./img/estrella.svg"/>
+            <p>Favoritos</p>
+        </div>
+        <div>
+            <img class="mas" src="./img/mas.svg"/>
+            <p>Información</p>
+        </div>
+        <div>
+            <img class="corazón" src="./img/corazon.svg"/>
+            <p>Realizar Donación</p>
+        </div>
+    </header>
+    <div>
+        <h1>Adopta Amor, Cambia una Vida</h1>
+        <p>¡Dales una oportunidad a esos peluditos 
+            que tanto lo necesitan! aqui , cada animal
+             tiene una historia que contar, pero todos 
+             comparten un deseo: encontrar un hogar lleno
+              de amor! 
+            </p>
+        <a><button class="VerMascota">Ver Mascotas</button></a>
+        <img class="imagenAnimales" src="./img/imagenanimales.svg"/>
+    </div>
+
+
 </body>
 </html>
