--- a/ApiRefugio/html/sobreNosotros.html
+++ b/ApiRefugio/html/sobreNosotros.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="../img/logo.svg">
+    <link rel="stylesheet" href="../style/sobre.css"/>
 </head>
 <body>
-    
+    <header class="BarraSuperior">
+        <img class="logo" src="../img/logo.svg" />
+        <a href="../html/sobreNosotros.html"><div>
+            <img class="Huella" src="../img/huella.svg" />
+            <p class="sobre">Sobre Nosotros</p>
+        </div></a>
+        <a href="../html/favoritos.html"><div>
+            <img class="Estrella" src="../img/estrella.svg" />
+            <p class="fav">Favoritos</p>
+        </div></a>
+        <a href="../html/informacion.html"><div>
+            <img class="mas" src="../img/mas.svg" />
+            <p class="inf">Información</p>
+        </div></a>
+        <a href="../html/realizar.html"><div>
+            <img class="corazon" src="../img/corazon.svg" />
+            <p class="realizar">Realizar Donación</p>
+        </div></a>
+    </header>
 </body>
 </html>
