feat :sparkles: new update PacoPets

--- a/ApiRefugio/html/favoritos.html
+++ b/ApiRefugio/html/favoritos.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Favoritos</title>
+    <link rel="icon" type="image/x-icon" href="../img/logo.svg">
+    <link rel="stylesheet" href="../style/favoritos.css"/>
 </head>
 <body>
+    <header class="BarraSuperior">
+        <a href="../index.html"><img class="logo" src="../img/logo.svg" /></a>
+        <a href="../html/sobreNosotros.html"><div>
+            <img class="Huella" src="../img/huella.svg" />
+            <p class="sobre">Sobre Nosotros</p>
+        </div></a>
+        <a href="../html/favoritos.html"><div>
+            <img class="Estrella" src="../img/estrella.svg" />
+            <p class="fav">Favoritos</p>
+        </div></a>
+        <a href="../html/informacion.html"><div>
+            <img class="mas" src="../img/mas.svg" />
+            <p class="inf">Información</p>
+        </div></a>
+        <a href="../html/realizar.html"><div>
+            <img class="corazon" src="../img/corazon.svg" />
+            <p class="realizar">Realizar Donación</p>
+        </div></a>
+    </header>
+    <div class="lineainferior"></div>
+    <h1 class="titulo"> Estos son los Favoritos</h1>
     
 </body>
 </html>
