--- a/ApiRefugio/html/sobreNosotros.html
+++ b/ApiRefugio/html/sobreNosotros.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sobre Nosotros</title>
     <link rel="icon" type="image/x-icon" href="../img/logo.svg">
     <link rel="stylesheet" href="../style/sobre.css"/>
 </head>
 <body>
     <header class="BarraSuperior">
-        <img class="logo" src="../img/logo.svg" />
+        <a href="../index.html"><img class="logo" src="../img/logo.svg" /></a>
         <a href="../html/sobreNosotros.html"><div>
             <img class="Huella" src="../img/huella.svg" />
             <p class="sobre">Sobre Nosotros</p>
@@ -27,5 +27,34 @@
             <p class="realizar">Realizar Donación</p>
         </div></a>
     </header>
+
+
+    <div class="lineainferior"></div>
+    <div class="seccionInferior">
+        <h1 class="titulo">Sobre Nosotros</h1>
+        <p class="texto">En PacoPets tenemos una misión clara: acercar a las
+             personas a miles de mascotas que buscan una nueva oportunidad de vida.
+              Sabemos que en todo el mundo hay animales esperando amor, atención y un hogar.
+            <br/>
+            <br/>
+              A través de PacoPets, brindamos una experiencia intuitiva, segura y emocionalmente
+               significativa para adoptar, conocer historias reales y generar conciencia sobre la 
+               situación de millones de perros, gatos y otras especies que viven en refugios esperand
+               o ser parte de una familia.
+            <br/>
+            <br/>
+               Además, promovemos la adopción
+                responsable, la esterilización y 
+                el respeto por la vida animal como pilares fundamentales de nuestra comunidad.
+            </p>
+    </div>
+    <a href="../index.html"><button class="volver">Volver</button></a>
+
+    <div class="imagenes">
+        <img class="huellasazules1" src="../img/HuellasAzules.svg"/>
+        <img class="huellasazules2" src="../img/HuellasAzules.svg"/>
+        <img class="huellasnegras1" src="../img/huellasNegras.svg"/>
+        <img class="huellasnegras2" src="../img/huellasNegras.svg"/>
+    </div>
 </body>
 </html>
