feat :sparkles: JavaScript Update

--- a/ApiRefugio/html/mascotas.html
+++ b/ApiRefugio/html/mascotas.html
@@ -27,5 +27,9 @@
             <p class="realizar">Realizar Donación</p>
         </div></a>
     </header>
+    <div id="pets_container">
+
+    </div>
 </body>
+<script src="../script/script.js"></script>
 </html>
