Feat :sparkles: new update PacoPets

--- a/ApiRefugio/html/mascotas.html
+++ b/ApiRefugio/html/mascotas.html
@@ -27,8 +27,27 @@
             <p class="realizar">Realizar Donación</p>
         </div></a>
     </header>
-    <div id="pets_container">
+    <section>
+        <div class="filters">
+            <input type="text" class="falso">
+        </div>
+        <div id="pets_container"></div>
+    </section>
+    <div class="fomulario_filtros">
+        <select name="Especie">
+            <option value="perro">Perro</option>
+            <option value="gato" selected>Gato</option>
+            <option value="conejo">Conejo</option>
+            <option value="aves">Aves</option>
+            <option value="otros">Conejo</option>
+        </select>
+        <select name="Edad">
+            <option value="perro">Baby</option>
+            <option value="gato" selected>Young</option>
+            <option value="conejo">Adult</option>
+            <option value="aves">Senior</option>
 
+        </select>
     </div>
 </body>
 <script src="../script/script.js"></script>
